deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: tictactoe-deployment
namespace: game
spec:
replicas: 2
selector:
matchLabels:
app: tictactoe
template:
metadata:
labels:
app: tictactoe
spec:
containers:
- name: tictactoe
image: IMAGE_PLACEHOLDER
ports:
- containerPort: 3000
