service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-service
  namespace: app2
spec:
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 3001
