ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  namespace: app2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: app2-group
    alb.ingress.kubernetes.io/load-balancer-name: app2-alb
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/target-group-name-prefix: app2tg
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: k8s-app2-tictacto-bf01bf8981-1823663961.ap-south-1.elb.amazonaws.com.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tictactoe-service
                port:
                  number: 80
